# metaformer_ecdysis

./: .gitignore  README.md  callbacks.py  config.py  ecdysis.md  environment.yml  environment_freeze.yml  get_flops.py  main.py  metrics.py  pyproject.toml  test.py  utils.py
configs/: ecdysis.yaml  ecdysis_test.yaml
data/: build.py  dataset_fg.py  generate_data_from_csv.py  insecta_download.py  samplers.py  split_insect_samples.py
dataset_generation/: __init__.py  __main__.py  connection.py.example  data.py  db.py  depricate_generate_tree.py  generate_tree.py  queries.py  readme.md  split.py  utils.py
dataset_generation/sql_queries/: old_sql_queries  queries
deploy/: README.md  automatic_training.sh  copy_reports.sh  deploy_model_by_version.sh  handler.py  inference.py  merge_other-incertae.sh  mount_dirs.sh  publish_model.sh  requirements.txt  run_new_lr_test.sh  send_report.py  serve.sh  sync_results.sh  test.sh  test_eval_only.sh  test_naming.sh  test_training.sh  training.sh  training_deploy.sh
deploy/MetaFG_2/: handler.py
models/: MHSA.py  MetaFG.py  MetaFG_meta.py  build.py
test/: callbacks_test.py  test_loaders.py
tests/: callbacks_test.py  dataset_count_test.py  json_stats_test.py
