[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaformer"
version = "0.0.1"
authors = [
  { name="Juan Fernández", email="jifdesantis90@gmail.com" },
]
description = "Metaformer models for Ecdysis"
readme = "ecdysis.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "timm >= 0.4.5",
    "yacs>=0.1.8"
]

[project.urls]
"Homepage" = "https://github.com/ignacio-ferreira-dev/metaformer_ecdysis.git"
"Bug Tracker" = "https://github.com/ignacio-ferreira-dev/metaformer_ecdysis/issues"